network-policy/backend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
  namespace: ap
spec:
  podSelector:
    matchLabels:
      app: backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 8081
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              team: infra
          podSelector:
            matchLabels:
              app: database
      ports:
        - port: 27017
